<resources>
    <string name="vk_link">https://vk.com/app7550574</string>
    <string name="app_name">Покупай — Помогай</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_request_button">Создать новое объявление</string>
    <string name="button_navigation_first">Объявления</string>
    <string name="button_navigation_first_first">Объявление</string>
    <string name="button_navigation_notification">Уведомления</string>
    <string name="button_navigation_profile">Профиль</string>
    <string name="button_navigation_map">Карта</string>
    <string name="heading_ads">Объявления</string>
    <string name="Adres_your_magazin">Адрес вашего магазина:</string>
    <string name="magazine_toast">Магазин: </string>
    <string name="map_error_search">С поиском магазинов произошли проблемы</string>
    <string name="create_new_adv_text">Создание объявления</string>
    <string name="your_last_adv_text">Ваш последний заказ:</string>
    <string name="product1">Продукт1</string>
    <string name="product2_text">Продукт2</string>
    <string name="your_can_text">Вы можете:</string>
    <string name="re_text">Пересоздайте прошлое объявление</string>
    <string name="or_text">ИЛИ</string>
    <string name="chose_product_text">Выберите необходимые товары из списка</string>
    <string name="back_text">назад</string>
    <string name="ready_text">Готово</string>
    <string name="named_advert_text">Название объявления</string>
    <string name="name_notification">Название уведомления</string>
    <string name="name_autor_text">Имя автора</string>
    <string name="date_text">24.05.23</string>
    <string name="list_product_text">Список продуктов</string>
    <string name="message_adv_text">Сообщить об успешном пожертвовании</string>
    <string name="adv_text">Объявления</string>
    <string name="number_adv_text">Номер заказа:</string>
    <string name="number_adv_text_hint6">0000</string>
    <string name="adress_shop_text">Адрeс вашего магазина:</string>
    <string name="adress_shop_text_hint">Адрес магазина</string>
    <string name="time_text">Осталось времени:</string>
    <string name="time_text_hint">00:00:00</string>
    <string name="create_adv_text">Состояние объявления:</string>
    <string name="adv_text_hint">Нет активных объявлений</string>
    <string name="stop_adv_text">Удалить объявление</string>
    <string name="adv_zabor_text">Забираю продукты</string>
    <string name="giver_text">Отдающий пользователь</string>
    <string name="number_telephone_text_hint">Введите номер телефона…</string>
    <string name="write_name_text">Введите имя…</string>
    <string name="write_password_text">Введите пароль…</string>
    <string name="Enter_text">Войти</string>
    <string name="create_new_account_text">Создать новый аккаунт</string>
    <string name="notifications_text">Уведомления</string>
    <string name="profile_text">Профиль</string>
    <string name="name_text">Имя</string>
    <string name="surname_text">Фамилия</string>
    <string name="redid_shop_text">сменить магазин</string>
    <string name="exit_from_account_text">Выйти из аккаунта</string>
    <string name="Authorization_text">Авторизация</string>
    <string name="i_needy_text">Я - нуждающийся</string>
    <string name="i_giver_text">Я - отдающий</string>
    <string name="active_adv_text">Активные объявления</string>
    <string name="giver_account_text">Отдающий пользователь</string>
    <string name="needy_account_text">Нуждающийся пользователь</string>
    <string name="write_number_phone_text_hint">Введите номер телефона…</string>
    <string name="write_name_text_hint">Введите имя…</string>
    <string name="write_password_text_hint">Введите пароль…</string>
    <string name="create_account_text">Создать аккаунт</string>
    <string name="save_account_text">Уже есть аккаунт? Войдите</string>
    <string name="enter_to_needy_text">Вход для отдающего</string>
    <string name="enter_text">Войти</string>
    <string name="name_text_hint">Имя профиля</string>
    <string name="name_text_needy">Имя нуждающегося</string>
    <string name="broadcast_text_hint">N успешных передач продуктов</string>
    <string name="some_success_products"> успешных передач продуктов</string>
    <string name="products_success">Успешных передач продуктов: </string>
    <string name="product_text_success"> продукта - </string>
    <string name="geolocation_text">Включить геолокацию</string>
    <string name="on_notifications_text">Включить уведомления</string>
    <string name="leave_account_text">Выйти из аккаунта</string>
    <string name="name_enter_text">Название</string>
    <string name="description_text">Описание</string>
    <string name="history_transfer_text">История передач</string>
    <string name="advert_sucesfully_create">Объявление успешно создано</string>
    <string name="smth_not_good">Что-то пошло не так</string>
    <string name="smth_not_good_try_again">Что-то пошло не так. Попробуйте еще раз</string>
    <string name="uncorrect_number_phone">Номер телефона введен некорректно</string>
    <string name="uncorrect_name">Ваш логин должен содержать хотя бы 4 символа</string>
    <string name="uncorrect_password">Ваш пароль должен содержать хотя бы 8 символов</string>
    <string name="not_right_password">Пароль неверный</string>
    <string name="account_not_exist">Данного пользователя не существует. Хотите создать новый аккаунт?</string>
    <string name="account_created">Данный пользователь уже существует. Войдите</string>
    <string name="not_full">Вы не заполнили все поля</string>
    <string name="needy_creating_title">Введите название вашего объявления</string>
    <string name="error">Пароль введен некорректно, либо такого пользователя не существует</string>
    <string name="needy_result_list">Итоговый набор продуктов:</string>
    <string name="connect_to_this_shop_market_map_text">Прикрепиться к этому магазину</string>
    <string name="edit_profile_data_text">Редактировать профиль</string>
    <string name="login_hint">Логин</string>
    <string name="telephone_hint">Телефон</string>
    <string name="enter_existing_password_hint">Введите существующий пароль</string>
    <string name="enter_message">Введите сообщение...</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="update_profile_data_text">Обновить данные профиля</string>
    <string name="name_of_product_text">Название продукта</string>
    <string name="cchoose_shop_text">Выберите магазин</string>
    <string name="name_of_shop_text">Название магазина</string>
    <string name="detailed_text">Подробнее</string>
    <string name="go_over_text">Перейти</string>
    <string name="name_advert_text">Название объявления</string>
    <string name="phone_number_text">Номер телефона</string>
    <string name="Id_now_what_is_it_text">00.00.00</string>
    <string name="notyfy_description">Описание уведомления</string>
    <string name="lot_of_product">Вы не можете добавлять больше 3 продуктов</string>
    <string name="added">Добавлено!</string>
    <string name="this_product_added">Вы уже добавили этот продукт</string>
    <string name="problems">Возникли проблемы. Попробуйте еще раз!</string>
    <string name="edit_name">Введите название!</string>
    <string name="add_to_list_product">Добавьте в список хотя бы один продукт</string>
    <string name="deleted">Удалено!</string>
    <string name="response">На ваше объявление откликнулись!</string>
    <string name="smth_wrong">Что-то пошло не так</string>
    <string name="sucses_notyfy_send">Уведомление успешно отправлено!</string>
    <string name="smth_problrs">Возникла проблема</string>
    <string name="prodlem_on_autorization">Произошла ошибка при авторизации. Попробуйте еще раз!</string>
    <string name="error_on_delated">Произошла ошибка при удалении</string>
    <string name="deal_correct">Поздравляем с успешно совершенной сделкой!</string>
    <string name="unvisinle_error">Непредвиденная ошибка!</string>
    <string name="sucsesfully_deleted">Успешно удалено!</string>
    <string name="time_is_up">Время вышло! Объявление отменится само</string>
    <string name="your_password_uncorrect">Ваш старый пароль введен неверно</string>
    <string name="used_data">Логин или номер телефона уже используются другим пользователем</string>
    <string name="sucses">Успешно!</string>
    <string name="error_on_route">Произошла ошибка при построении маршрута</string>
    <string name="celebrate_help">Если вы хотите получить дополнительные бонусы и загрузите чек в сервис SuperUp VK</string>
    <string name="celebrate_help_title">Поздравляем с успешной передачей продуктов!</string>
    <string name="open_vk">Отсканировать чек в VK</string>
    <string name="no_image_warnings">...</string>
    <string name="no_adverts">Объявление отсутствует</string>
    <string name="auth_wait">Немного подождите</string>
    <string name="loading">Загрузка</string>
    <string name="return_to_main_page">Вернуться на страницу объявлений</string>
    <string name="set_route_near_market">Построить маршрут до ближайшего магазина</string>
    <string name="open_location">Идет подключение геолокации....</string>
    <string name="edit_profile">Редактировать данные</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="update">Обновить</string>
    <string name="cancel">Отменить</string>
    <string name="faq_link">FAQ?</string>
    <string name="question">Вопрос</string>
    <string name="not_found">Ничего не найдено!</string>
    <string name="faq_text">Ответы на часто задаваемые вопросы</string>
    <string name="pin_market">Прикрепитесь к магазину!</string>
    <string name="write_to_needy">Сообщите нуждающемуся о покупке сами!</string>
    <string name="privacy_policy">Политика конфедициальности</string>
    <string name="pp_1">Александр Кулагин создал приложение Покупай-помогай в качестве бесплатного приложения. Эта УСЛУГА предоставляется Александром бесплатно и предназначена для использования как есть.</string>
    <string name="pp_2">Эта страница используется для информирования посетителей о наших правилах сбора, использования и раскрытия Личной информации, если кто-то решил воспользоваться моим Сервисом.</string>
    <string name="pp_3">Если вы решите использовать наш Сервис, вы соглашаетесь на сбор и использование информации в связи с этой политикой. Личная информация, которую я собираю, используется для предоставления и улучшения Сервиса. Я не буду использовать или делиться вашей информацией с кем-либо, кроме случаев, описанных в настоящей Политике конфиденциальности.</string>
    <string name="pp_4">Сбор и использование информации</string>
    <string name="pp_5">Для лучшего опыта при использовании нашего Сервиса я могу потребовать от вас предоставить нам определенную личную информацию, включая, помимо прочего, геолокацию и состояние телефона. Информация, которую я запрашиваю, будет сохранена на вашем устройстве и никоим образом не будет собираться мной.</string>
    <string name="pp_7">Приложение использует сторонние сервисы, которые могут собирать информацию, используемую для вашей идентификации.</string>
    <string name="pp_8">Изменения в настоящей Политике конфиденциальности</string>
    <string name="pp_9">Я могу время от времени обновлять нашу Политику конфиденциальности. Таким образом, вам рекомендуется периодически просматривать эту страницу на предмет любых изменений. Я сообщу вам о любых изменениях, опубликовав новую Политику конфиденциальности на этой странице. Эти изменения вступают в силу сразу после публикации на этой странице.</string>
    <string name="pp_10">Если у вас есть какие-либо вопросы или предложения относительно моей Политики конфиденциальности, не стесняйтесь обращаться ко мне по адресу pokupaypomogay@mail.ru</string>
    <string name="getting_product_description">Продиктуйте этот код кассиру:</string>
</resources>