<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standard_size_very_medium">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_7"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_8"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_9"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/pp_10"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>