<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:paddingLeft="@dimen/standard_size_very_medium"
    android:paddingRight="@dimen/standard_size_very_medium"
    android:id="@+id/fragment_getter_advrs">

    <TextView
        style="@style/heading_getter_fragments"
        android:text="@string/adv_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_adv_text"
        android:layout_marginTop="@dimen/standard_size_very_medium"
        android:layout_gravity="center"
        android:textColor="@color/grey_500"
        android:id="@+id/text_number_of_advert" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_size_very_medium"
        android:text="@string/number_adv_text_hint6"
        android:layout_gravity="center"
        android:textSize="48sp"
        android:id="@+id/number_of_advertisement"
        android:textColor="@color/grey_500"
        android:visibility="invisible"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_size_very_medium">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_shop_text"
                android:layout_marginStart="@dimen/standard_size_very_medium"
                android:textColor="@color/grey_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_size_small"
                android:text="@string/adress_shop_text_hint"
                android:id="@+id/address_shop"
                android:visibility="invisible"/>
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/standard_size_small"
        android:layout_marginLeft="@dimen/standard_size_very_medium"
        android:layout_marginRight="@dimen/standard_size_very_medium"
        android:background="@color/grey_light"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard_size_small"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2.5dp"
            android:text="@string/time_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timer_to_advert"
            android:layout_marginStart="2.5dp"
            android:text="@string/time_text_hint"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/getter_advert_status"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adv_text_hint"
            android:textColor="@color/grey_500"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/getter_advert_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/getter_advert_title_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_advert_text"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/grey_500"/>
        <ListView
            android:layout_gravity="center"
            android:id="@+id/getter_advert_products"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/standard_size_very_medium" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard_size_small"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stop_advert"
            style="@style/grey_500_button"
            android:layout_gravity="center"
            android:text="@string/stop_adv_text"
            android:visibility="visible" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pick_up_order"
            style="@style/grey_500_button"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/very_big"
            android:text="@string/adv_zabor_text"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_new_request"
            style="@style/grey_500_button"
            android:text="@string/add_new_request_button"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>

