<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.GetterNewAdvert_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/style5"
            android:textSize="25sp"
            android:layout_marginTop="25sp"
            android:textColor="@color/grey_500"
            android:text="@string/create_new_adv_text" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_last_adv_text"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/product1"
                android:id="@+id/product1_adv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/product2_text"
                android:id="@+id/product2_adv"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_can_text"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="140dp"
                android:layout_height="28dp"
                android:background="@drawable/style1"
                android:textColor="@color/white"
                android:text="@string/re_text"
                android:id="@+id/re_advertisment"
                android:textSize="12sp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:text="@string/or_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey_500"
            android:text="@string/chose_product_text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            tools:listitem="@layout/item_getter_product_name"
            android:id="@+id/product_choice"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_marginBottom="5dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/back_text"
            android:id="@+id/button_back"
            android:textColor="@color/white"
            android:background="@drawable/style1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/ready_text"
            android:textColor="@color/white"
            android:id="@+id/ready_to_create"
            android:background="@drawable/style1"/>
    </LinearLayout>


</FrameLayout>