<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SetterHelpFinish_Activity"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setter_finish_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="24sp"
        android:text="@string/celebrate_help_title" />

    <TextView
        android:id="@+id/setter_finish_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/celebrate_help" />

    <Button
        android:id="@+id/setter_finish_gotovk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:backgroundTint="@color/green_pastel"
        android:layout_marginBottom="20dp"
        android:text="@string/go_over_text" />

    <Button
        android:id="@+id/setter_finish_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:backgroundTint="@color/grey_light"
        android:text="@string/return_to_main_page"
        android:layout_marginBottom="20dp"/>
</LinearLayout>