<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".activities.SetterAdvert_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".activities.SetterAdvert_Activity">
        <ImageView
            android:id="@+id/setter_advert_back"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:contentDescription="@string/no_image_warnings"
            android:background="@drawable/custom_round_border"
            app:srcCompat="@drawable/ic_baseline_chevron_left_24" />
        <TextView
            android:id="@+id/setter_advert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:text="@string/named_advert_text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/setter_advert_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/name_autor_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/setter_advert_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/date_text"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/setter_advert_product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/list_product_text"
        android:textSize="32sp" />
    <ListView
        android:id="@+id/setter_advert_product_item_list_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/setter_advert_accept"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/message_adv_text"
        android:textSize="18sp"
        app:backgroundTint="@color/green_pastel" />
</LinearLayout>