<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/standard_size_very_medium"
    android:paddingBottom="60dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/giver_finish_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="24sp"
        android:text="@string/celebrate_help_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/standard_size_very_medium"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/getting_product_description" />

    <TextView
        android:id="@+id/giver_finish_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/standard_size_very_medium"
        android:layout_marginBottom="@dimen/standard_size_very_medium" />

    <TextView
        android:id="@+id/giver_finish_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/standard_size_very_medium"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/celebrate_help" />

    <com.buyhelp.nofoodsharingproject.presentation.views.CustomAppCompatButton
        android:id="@+id/giver_finish_open_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style6"
        android:textColor="@color/white"
        android:text="@string/write_to_needy"
        android:layout_marginTop="@dimen/standard_size_very_medium"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/giver_finish_gotovk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@drawable/custom_round_border_active"
        android:layout_marginBottom="@dimen/standard_size_very_medium"
        android:text="@string/go_over_text" />

    <TextView
        android:id="@+id/giver_finish_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/custom_round_border"
        android:text="@string/return_to_main_page"
        android:layout_marginBottom="@dimen/standard_size_very_medium"/>
</LinearLayout>